подготовил метод для форматирования логов clash

--- a/ObhodBApp/ObhodBApp.csproj
+++ b/ObhodBApp/ObhodBApp.csproj
@@ -30,4 +30,9 @@
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="icon.ico" />
+      <AvaloniaResource Include="icon.ico" />
+    </ItemGroup>
 </Project>
