--- a/ObhodBApp/ObhodBApp.csproj
+++ b/ObhodBApp/ObhodBApp.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
         <PackageReference Include="Avalonia" Version="11.3.6"/>
+        <PackageReference Include="Avalonia.AvaloniaEdit" Version="11.3.0" />
         <PackageReference Include="Avalonia.Desktop" Version="11.3.6"/>
         <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.6"/>
         <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.6"/>
@@ -34,5 +35,9 @@
     <ItemGroup>
       <None Remove="icon.ico" />
       <AvaloniaResource Include="icon.ico" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="ViewModel\" />
     </ItemGroup>
 </Project>
