--- a/ObhodBApp/ObhodBApp.csproj
+++ b/ObhodBApp/ObhodBApp.csproj
@@ -21,6 +21,7 @@
         </PackageReference>
         <PackageReference Include="LiveChartsCore.SkiaSharpView.Avalonia" Version="2.0.0-rc6.1" />
         <PackageReference Include="Material.Icons.Avalonia" Version="3.0.0-preview3.1" />
+        <PackageReference Include="ReactiveUI" Version="22.2.1" />
     </ItemGroup>
 
     <ItemGroup>
@@ -35,9 +36,5 @@
     <ItemGroup>
       <None Remove="icon.ico" />
       <AvaloniaResource Include="icon.ico" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="ViewModel\" />
     </ItemGroup>
 </Project>
