--- a/ObhodBApp/ObhodBApp.csproj
+++ b/ObhodBApp/ObhodBApp.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="Avalonia" Version="11.3.6"/>
         <PackageReference Include="Avalonia.AvaloniaEdit" Version="11.3.0" />
         <PackageReference Include="Avalonia.Desktop" Version="11.3.6"/>
+        <PackageReference Include="Avalonia.ReactiveUI" Version="11.3.6" />
         <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.6"/>
         <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.6"/>
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
@@ -36,5 +37,9 @@
     <ItemGroup>
       <None Remove="icon.ico" />
       <AvaloniaResource Include="icon.ico" />
+      <None Remove="enabled.ico" />
+      <AvaloniaResource Include="enabled.ico">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </AvaloniaResource>
     </ItemGroup>
 </Project>
