--- a/ObhodBApp/ObhodBApp.csproj
+++ b/ObhodBApp/ObhodBApp.csproj
@@ -23,6 +23,7 @@
         <PackageReference Include="LiveChartsCore.SkiaSharpView.Avalonia" Version="2.0.0-rc6.1" />
         <PackageReference Include="Material.Icons.Avalonia" Version="3.0.0-preview3.1" />
         <PackageReference Include="ReactiveUI" Version="22.2.1" />
+        <PackageReference Include="TaskScheduler" Version="2.12.2" />
     </ItemGroup>
 
     <ItemGroup>
