финальный коммит первой беты вроде бы основные баги починил всё более менее рабочее автозапуск на линуксе не тестил завтра мб

--- a/ObhodBApp/ObhodBApp.csproj
+++ b/ObhodBApp/ObhodBApp.csproj
@@ -43,4 +43,11 @@
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </AvaloniaResource>
     </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="Pages\UpdateMsg.axaml.cs">
+        <DependentUpon>UpdateMsg.axaml</DependentUpon>
+        <SubType>Code</SubType>
+      </Compile>
+    </ItemGroup>
 </Project>
