--- a/ObhodBApp/clash/config.yaml
+++ b/ObhodBApp/clash/config.yaml
@@ -27,17 +27,21 @@ dns:
     geoip-code: US
 
 proxies:
-  - name: "socks5-proxy"
-    type: socks5
-    server: 127.0.0.1
-    port: 1080
+  - name: "main"
+    type: ss
+    server: 151.241.229.223
+    port: 43231
+    cipher: chacha20-ietf-poly1305
+    password: CwDWHbZIVjM4EDAkDF0FZRd8jEDZ6PIPq6k7yLh0uE0A
     udp: true
+    plugin: null
+    timeout: 60
 
 proxy-groups:
   - name: "ObhodBlokirovok"
     type: select
     proxies:
-      - "socks5-proxy"
+      - "main"
 
 rules:
   # YouTube
@@ -53,17 +57,17 @@ rules:
   - DOMAIN-SUFFIX,twitter.com,ObhodBlokirovok
   - DOMAIN-KEYWORD,twitter,ObhodBlokirovok
   - DOMAIN-KEYWORD,twitter,ObhodBlokirovok
+  - DOMAIN-KEYWORD,twimg,ObhodBlokirovok
   # Discord
   - PROCESS-NAME,vesktop.exe,ObhodBlokirovok
+  - DOMAIN-KEYWORD,discord,ObhodBlokirovok
+  - PROCESS-NAME,Discord.exe,ObhodBlokirovok
   # DeviantArt
   - DOMAIN-SUFFIX,wixmp,ObhodBlokirovok
   - DOMAIN-SUFFIX,winxmp.com,ObhodBlokirovok
   - DOMAIN-KEYWORD,wixmp,ObhodBlokirovok
-  - DOMAIN-KEYWORD,speedtest,ObhodBlokirovok
-  # батла
-  - PROCESS-NAME,bf6.exe,ObhodBlokirovok
-  - DOMAIN-KEYWORD,rule34,ObhodBlokirovok
-  - DOMAIN-KEYWORD,discord,ObhodBlokirovok
-  - PROCESS-NAME,Discord.exe,ObhodBlokirovok
-  - DOMAIN-KEYWORD,twimg,ObhodBlokirovok
+    
+  - PROCESS-NAME,RocketLeague.exe,ObhodBlokirovok
+    
+  # Оставьте эту строчку, чтобы весь остальной траффик шёл через интернет
   - MATCH,DIRECT
