--- a/ObhodBApp/ObhodBApp.csproj
+++ b/ObhodBApp/ObhodBApp.csproj
@@ -25,6 +25,7 @@
         <PackageReference Include="Material.Icons.Avalonia" Version="3.0.0-preview3.1" />
         <PackageReference Include="ReactiveUI" Version="22.2.1" />
         <PackageReference Include="TaskScheduler" Version="2.12.2" />
+        <PackageReference Include="YamlDotNet" Version="16.3.0" />
     </ItemGroup>
 
     <ItemGroup>
