--- a/ObhodBApp/ObhodBApp.csproj
+++ b/ObhodBApp/ObhodBApp.csproj
@@ -7,6 +7,9 @@
         <ApplicationManifest>app.manifest</ApplicationManifest>
         <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
         <ApplicationIcon>icon.ico</ApplicationIcon>
+
+        <FileVersion>0.1.0</FileVersion>
+        <InformationalVersion>0.1.0-beta</InformationalVersion>
     </PropertyGroup>
 
     <ItemGroup>
